# opensmsc

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  docker-compose.dev.yml
AdminService/: README.md
Authenticator/: CMakeLists.txt
Authenticator/conf/: credentials.toml
Authenticator/files/conf/: allowed_ips.conf
Authenticator/files/dbus/: IAuth.xml  com.opensmsc.smppauth.service  com.opensmsc.smppauth.xml
Authenticator/include/: auth_service.hpp  credentials_store.hpp
Authenticator/src/: auth_service.cpp  credentials_store.cpp  main.cpp
Authenticator/tests/: test_auth_service.cpp  test_iauth_dbus.cpp
Common/: CMakeLists.txt
Common/include/common/: config.hpp  logger.hpp
Common/src/: config.cpp  logger.cpp
Common/tests/: test_config.cpp  test_logger.cpp
Docker/: BUILD_NOTES.md  README.md  docker-compose.yaml
Docker/build-cache/: compile_commands.json
Docker/build-cache/SMPPServer/: simple_smpp_server
Docker/build-cache/SMPPServer/config/: config.h
Docker/build-cache/SmppClientHandler/: smpp_client_handler
Docker/smsc-dev/: Dockerfile  Dockerfile.dev  supervisord.conf  system.conf
SMPPServer/: CMakeLists.txt  CMakeLists_offline.txt  CMakeLists_test.txt
SMPPServer/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  smpp_test_build  test_main.cpp
SMPPServer/config/: allowed_ips.conf
SMPPServer/files/dbus/: IServer.xml  com.opensmsc.smppserver.service  com.opensmsc.smppserver.xml
SMPPServer/files/dbus-policy/: com.telecom.smpp.conf
SMPPServer/files/systemd/: SMPPAuthenticator@.service
SMPPServer/include/: app_info.hpp  config.h.in  connection_registry.hpp  ip_validator.hpp  logger.hpp  session_id.hpp  session_launcher.hpp  smpp_client_handler.hpp  smpp_handler.hpp  smpp_pdu_framer.hpp  smpp_server_service.hpp  smpp_service_manager.hpp  smpp_session.hpp  tcp_server.hpp
SMPPServer/src/: app_info.cpp  connection_registry.cpp  ip_validator.cpp  main.cpp  session_launcher.cpp  smpp_client_handler.cpp  smpp_handler.cpp  smpp_pdu_framer.cpp  smpp_server_service.cpp  smpp_service_manager.cpp  smpp_session.cpp  tcp_server.cpp
SMPPServer/tests/: test_connection_registry.cpp  test_iserver_dbus.cpp  test_iserver_methods.cpp  test_route_message.cpp  test_session_launcher.cpp
SmppClientHandler/: CMakeLists.txt  README.md
SmppClientHandler/files/dbus/: IClientHandler.xml  com.smmc.SmppClient.xml
SmppClientHandler/include/: smpp_client_handler.hpp  smpp_pdu.hpp  smpp_session.hpp  smpp_state_base.hpp  smpp_state_machine.hpp  smpp_state_machine_v2.hpp  smpp_states.hpp
SmppClientHandler/src/: main.cpp  smpp_client_handler.cpp  smpp_session.cpp  smpp_state_machine.cpp  smpp_state_machine_v2.cpp  smpp_states.cpp
SmppClientHandler/tests/: test_deliver_sm.cpp  test_iclienthandler_dbus.cpp  test_smpp_integration.cpp  test_smpp_pdu.cpp  test_smpp_session.cpp  test_throttle.cpp
doc/: BUILD_AND_TEST_PLAN.md  CURRENT_STATUS.md  DBUS_INTERFACES.md  SMPP_CLIENT_HANDLER_01_OVERVIEW.md  SMPP_CLIENT_HANDLER_02_STATE_PATTERN.md  SMPP_CLIENT_HANDLER_03_STATE_TRANSITIONS.md  SMPP_TESTING_GUIDE.md  SYSTEM_OOAD_DESIGN.md  VERSIONING.md  dev_env_exit_criteria.md  development_environment.md  phase1.1_code_improvements.md  phase1.1_implementation_plan.md  projectplan.md  smpp_protocol_design.md
doc/SmppServer/: ARCHITECTURE_UPDATE_v2.md  CLASS_DESIGN_PLAN.md  LLD_Overview.md  README.md  SEQUENCE_DIAGRAMS.md  SMPPServer_High_Level_Design.md
doc/SmppServer/build_system/: cmake_configuration.md  dependency_management.md
doc/SmppServer/class_specifications/: business_logic_layer.md  infrastructure_layer.md  presentation_layer.md  protocol_layer.md
doc/SmppServer/error_handling/: error_codes.md  exception_handling.md  recovery_strategies.md
doc/SmppServer/implementation_guides/: class_implementation_checklist.md  common_patterns.md  cpp_file_templates.md  header_file_templates.md
doc/SmppServer/testing/: integration_testing_strategy.md  mock_objects.md  test_cases.md  unit_testing_strategy.md
doc/diagrams/: README.md  SMPP_STATE_MACHINE.puml  bind_transmitter_flow.puml  connection_establishment.puml  enquire_link_flow.puml
doc/projectexecution/: build_report.md  dev_env_setup.md  dev_env_verification_results.md  phase1.1_progress.md  phase1.1_testing_results.md
systemd/: smpp-auth.service  smpp-client@.service  smpp-server.service
tests/: quick_test.py  raw_test.py  test_dev_env.sh  test_smpp_client.py
